[[tool.poetry.source]]
name = "subgrab"
url = "https://github.com/RafayGhafoor/Subscene-Subtitle-Grabber"

[tool.poetry]
name = "subgrab"
version = "1.0.5"
description = "Automated subtitles fetching"
readme = "README.md"
keywords = ["automation", "subtitles", "python", "pyproject.toml", "subscene", "subgrab"]
homepage = "https://github.com/RafayGhafoor/Subscene-Subtitle-Grabber"
repository = "https://github.com/RYSKZ/Subscene-Subtitle-Grabber"
documentation = "https://github.com/RafayGhafoor/Subscene-Subtitle-Grabber"
authors = ["Rafay Ghafoor <rafayghafoor@protonmail.com>", "RYSKZ <amitkmbt@gmail.com>"]
license = "MIT"


[tool.poetry.scripts]
subgrab = 'subgrab.cli:main'

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.23.0"
bs4 = "^0.0.1"
lxml = "^4.5.0"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = "^19.10b0"
flake8 = "^3.7.9"
pre-commit = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
